synopsis: "Mech.v"
description:
"""
Mech.v library
"""
opam-version: "2.0"
maintainer: "e@x80.org"
bug-reports: "https://github.com/jouvelot/mech.v"
homepage: "https://github.com/jouvelot/mech.v"
dev-repo: "git+https://github.com/jouvelot/mech.v.git"
authors: [
  "Emilio Jesús Gallego Arias <e@x80.org>"
  "Pierre Jouvelot"
  "Lucas Massoni Sguerra"
]
license: "LGPL-2.1-or-later"
doc: "https://jouvelot.github.io/mech.v/"

depends: [
  "rocq-core"    { >= "9.1" & < "9.2~" }
  "rocq-stdlib"  { >= "9.1" & < "9.2~" }
  "dune"         { >= "3.5.0"  }

  "rocq-mathcomp-algebra"  { >= "2.5.0" & < "2.6~" }
  "rocq-mathcomp-fingroup" { >= "2.5.0" & < "2.6~" }
  "rocq-mathcomp-finmap"   { >= "2.2.2" & < "2.3~" }
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
run-test: [ [ "dune" "runtest" "-p" name "-j" jobs ] ]
